freeform-docs/v4/support.md
---
title: Craft Freeform 4.x - Support
description: Need help with Freeform? We love helping our customers discover best practices, resolve issues, and achieve their goals! Check out the options below...
prev: false
next: false
---

<meta property="og:image" content="https://docs.solspace.com/extras/social/craft/freeform/freeform.png" />

::: new /craft/freeform/v5/support/
Freeform
:::

<div id="pr-heading">
    <img src="https://docs.solspace.com/extras/icons/products/freeform-icon.png" alt="Freeform" class="pr-image">
    <span class="pr-name">Freeform</span>
    <span class="pr-category">for Craft</span>
    <div class="pr-v-wrapper">
        <div class="pr-v">
            <span class="pr-v-v">4.x</span>
            <span class="pr-v-arrow arrow down"></span>
        </div>
        <ul class="pr-v-list">
            <li><a href="/craft/freeform/v5/">5.x<span class="pr-v-type pr-latest">✓ Latest</span></a></li>
            <li><a href="/craft/freeform/v4/">4.x</a></li>
            <li><a href="/craft/freeform/v3/">3.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v2/">2.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v1/">1.x<span class="pr-v-type pr-retired">Retired</span></a></li>
        </ul>
    </div>
    <div class="pr-buy">
        <a href="https://plugins.craftcms.com/freeform" class="button button-blue"><span class="external-url">Plugin Store</span></a>
    </div>
</div>

<span class="page-section"><a href="/craft/freeform/v4/overview/">Overview</a></span>

# Support

<div class="hero-lead">

Need help with Freeform? We love helping our customers discover best practices, resolve issues, and achieve their goals! Check out the options below...

</div>

<div class="menu-grid">
    <a href="#i-m-new-to-freeform" class="menu-box">
        <img src="../../../images/icons/star.png" alt="I'm new to Freeform.">
        <div class="menu-grid-text">
            <h3>I'm new to Freeform.</h3>
            <p>We offer plenty of resources to help you learn and understand how Freeform works.</p>
        </div>
    </a>
    <a href="#i-have-a-question" class="menu-box">
        <img src="../../../images/icons/question-sign.png" alt="I have a question...">
        <div class="menu-grid-text">
            <h3>I have a question...</h3>
            <p>Is something not working correctly? Need to know if Freeform can do ________?</p>
        </div>
    </a>
    <a href="#how-do-i" class="menu-box">
        <img src="../../../images/icons/clipboard.png" alt="How do I ________?">
        <div class="menu-grid-text">
            <h3>How do I ________?</h3>
            <p>Wondering how to accomplish certain things with Freeform? Have a complex setup?</p>
        </div>
    </a>
    <a href="#i-have-an-urgent-issue" class="menu-box">
        <img src="../../../images/icons/alarm.png" alt="I have an urgent issue!">
        <div class="menu-grid-text">
            <h3>I have an urgent issue!</h3>
            <p>For when you need faster responses and/or a web call to troubleshoot and resolve an issue.</p>
        </div>
    </a>
    <a href="#can-solspace-build-me-feature" class="menu-box">
        <img src="../../../images/icons/box.png" alt="Can you build ________?">
        <div class="menu-grid-text">
            <h3>Can you build ________?</h3>
            <p>Need a feature added to Freeform? Or maybe a new API integration? We can help.</p>
        </div>
    </a>
    <a href="#i-have-an-idea" class="menu-box">
        <img src="../../../images/icons/light-bulb.png" alt="I have an idea!">
        <div class="menu-grid-text">
            <h3>I have an idea!</h3>
            <p>We love hearing from our customers on ways to make Freeform better!</p>
        </div>
    </a>
</div>

[[toc]]

## I'm new to Freeform.
If this is your first time using Freeform, please be sure to check out the:

- [Compare Chart](./#compare) - get a bigger picture view of Freeform's features and which edition they are offered in.
- [Getting Started](./getting-started/) - get a quick overview of how Freeform's main pieces all fit together.
- [Common Issues & Questions](./common-issues/) - many times a question you have or issue you're experiencing is a common one, and we've provided guides to help you resolve it.
- [Guides / Tips](./guides/) - plenty of guides and tips on how to take Freeform a little further.

::: guide ../../guides/troubleshooting-form-issues/
Quick troubleshooting the most commonly reported issues with your form's appearance, behavior, or submission of the form on the front end.
:::


## I have a question...
If you have a question about the plugin, please check out the following options:

### [Create a private Support Ticket](#create-a-support-ticket)

- I'm getting an error or something isn't working correctly.
- I'd like to know if Freeform can do ____________.
- I have a question about my license/purchase/account.

### [Ask on GitHub](https://github.com/solspace/craft-freeform/)

- I'm getting an error or something isn't working correctly (report in [GitHub Issues](https://github.com/solspace/craft-freeform/issues)).
- I'd like to know if Freeform can do ____________ (ask question in [GitHub Discussions](https://github.com/solspace/craft-freeform/discussions/)).


## How do I ____________?
While we will do our best to provide you with assistance and direction on how to get endless possibilities working with Freeform, our scope of regular support does have some limitations. We cannot always provide complete code examples, help with server configuration, or walk you through complex setups that involve [flux capacitors](https://backtothefuture.fandom.com/wiki/Flux_capacitor), etc. In cases like this, we kindly ask that you consider the following approaches:

- [GitHub Discussions](https://github.com/solspace/craft-freeform/discussions/) - you can search questions others have asked, or create your own if it hasn't been asked already.
- [Craft CMS Stack Exchange](https://craftcms.stackexchange.com/questions/tagged/solspace) - research or gather information and advice from all over the Craft community, and also leave a public record for others trying to do something similar to find and learn from.
- [Premium Support](../../../../support/premium/) - this service allows us to spend the time necessary to understand your project goals and have a meaningful conversation and if necessary, have a Solspace developer walk you through the steps necessary.
- If it's a quicker question (e.g. "how do I send email notifications to the user submitting the form"), feel free to [creating a Support Ticket](#create-a-support-ticket) and we'd be happy to assist.


## I have an urgent issue!
If you have an urgent issue and/or a larger series of questions, that require more in-depth help, please consider the following options:

- [Create a Support Ticket](#create-a-support-ticket) - when there is a critical issue with Freeform or your website, we always try to prioritize these ticket types, but depending on the issue, the current support ticket load, the time of day (and timezone), we may not always be able to get back to you fast enough. Feel free to start with this, but if it's very pressing and/or complex, please consider the options below...
- [Premium Support](../../../../support/premium/) - this service level does not come with any timeframe guarantees, but these requests always move to the very top of the list and we'll try to get back to you as quickly as possible (within an hour or so, depending on timezone) and arrange a time to get on a web call, etc.


## Can Solspace build me ____________ feature?
A number of features available in Freeform are the result of another customer hiring us to build that feature for their client's needs. Wherever possible, we can try to discount the new feature or API integration if we believe many others in the community will benefit from it as well. Please [inquire with us for an estimate by creating a Support Ticket](#create-a-support-ticket).


## I have an idea!
Many of our best ideas come from listening carefully to our customers! If you have any ideas or feedback to provide us about Freeform, we'd love to hear them! Please visit the ["Feature Requests" area in the GitHub Discussions](https://github.com/solspace/craft-freeform/discussions/categories/feature-requests) area of the Freeform repository, where you can see all other requests made and vote up ideas you love!


<div class="support-ticket">

## Create a Support Ticket
<a href="https://github.com/solspace/craft-freeform/" class="support-ticket-alt">Ask on GitHub</a>
<a href="https://craftcms.stackexchange.com/questions/tagged/solspace" class="support-ticket-alt">Stack Exchange</a>

<div class="support-ticket-inner">

If you've encountered any issues, have a pre-sale question or need help with anything else, please fill out the form below.

::: guide ../guides/troubleshooting-form-issues/
Quick troubleshooting the most commonly reported issues with your form's appearance, behavior, or submission of the form on the front end.
:::

<iframe title="Support Form" id="support-form" src="https://support.solspace.com/software/support?cms=Craft%204&craftProduct=Freeform%20Lite" scrolling="yes" height="850px" width="100%" frameborder="0"></iframe>

</div>

</div>